--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # jpa mysql
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_book?useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot_book?useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.username=root
@@ -10,3 +10,4 @@ spring.datasource.password=3690
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
